# scope_guard

./: CMakeLists.txt  LICENSE
include/: scope_guard.h
ut/: CMakeLists.txt  scope_guard_test.cpp
